fix logo align

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -7,7 +7,6 @@ body {
 }
 
 .logo {
-	margin-right: 15px;
 	vertical-align: bottom;
 }
 
